css/mobile.css
main {
    overflow-x: hidden;
}

h1 {
    margin-top: 15px;
    text-align: center;
}

aside {
    position: relative;
    display: block;
    top: 0px;
    width: 100%;
    height: auto;
}

form fieldset {
    width: auto;
}

form select {
    width: calc(100vw - 14px);
}

body:not(.iframable)>*:not(aside):not(header) {
    padding-left: inherit;
}

nav>ul {
    position: relative;
}

nav>ul>li,
nav>ul>.connect {
    float: inherit;
}

.dropbtn,
nav>ul>li>* {
    height: 30px;
    padding: 0;
}

h1,
section {
    padding-left: 0 !important;
}

/* TODO fix dropdown */

